[package]
name = "moos-ivp-language-server"
version = "0.2.0"
license-file = "LICENSE"
description = "LSP server for the MOOS-IvP autonomy software suite."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
clap = { version = "4.5.18", features = ["derive", "env"] }
lsp-server = "0.7.6"
lsp-server-derive-macro = { version = "0.1.0", path = "crates/lsp-server-derive-macro" }
lsp-types = "0.95.1"
moos-parser = { git = "https://github.com/cgagner/moos-rs.git", branch = "feature/refactor", features = [
  "lsp-types",
  "all-parsers",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
